findbugs: inefficient use of new Long